[package]
name = "axum_sample"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.1.1"
http = "0.2"
http-body = "0.4"
hyper = { version = "0.14", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = "*"

[[example]]
name = "helloworld"

[[example]]
name = "json"

[[example]]
name = "path_params"

[[example]]
name = "path_json"

[[example]]
name = "from_request"

[[example]]
name = "state"
